# rstr

./: .gitignore  LICENSE  README.md
.github/workflows/: rust.yml
rstr_client/: Cargo.toml  build.rs  rstr.rc
rstr_client/.cargo/: config.toml
rstr_client/src/: client.rs  gui.rs  main.rs
rstr_client/ui/: common.slint  create-meta-dialog.slint  main-screen.slint
rstr_core/: Cargo.toml
rstr_core/src/: lib.rs  message.rs  meta.rs
rstr_core/src/binary/: reader.rs  serialization.rs  writer.rs
rstr_projfs/: Cargo.toml
rstr_projfs/src/: lib.rs  projfs.rs
rstr_server/: Cargo.toml
rstr_server/src/: main.rs  server.rs
rstr_ui/: Cargo.toml  build.rs
rstr_ui/src/: event_message.rs  gui.rs  lib.rs  model.rs
rstr_ui/ui/: app-window.slint  create-meta-dialog.slint  model.slint  receiver-screen.slint  sender-screen.slint
