[package]
name = "rstr_core"
version = "0.1.0"
edition = "2024"

[lib]
name="rstr_core"
path="src/lib.rs"

[dependencies]
#sha1 = "0.10.6"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
num-derive = "0.4.2"
num-traits = "0.2"
base64 = "0.22.1"
tokio = { version = "1.45.1", features = ["io-util", "fs", "rt", "sync"]}
bincode = "=2.0.1"
bytes = "1.10.1"